# summer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  README.zh.md  h
.github/workflows/: cmake-single-platform.yml
summer/: Summer.h  dag.h  traits.h  util.h
summer/bean/: Constructor.h  Define.h  Factory.h  Traits.h
summer/dag/: Graph.h  GraphOperation.h  Operation.h  Vertex.h
summer/dag/detail/: GraphOperation.h
summer/util/: Collection.h  Print.h
test/: BeanDefineTest.cpp  BeanDefineTest.h  BeanTest.cpp  BeanTest.h  CMakeLists.txt  DefineTest.cpp  DefineTest.h  InjectTest.cpp  InjectTest.h  TestBeanClass.h  TestClass.h  VertexTest.cpp  VertexTest.h  VertexTestClass.h
